--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .git/
 advenv/
+__pycache__/
+data/eyeglasses/*
+data/test_me/train/*
+data/test_me/val/*
+data/agn_me_extras160/Michael_Chaykowsky/*
+tmp/*
+*.pth
+*.tar
+*.MOV
